# luki-core-agent

./: .dockerignore  .gitignore  .railwayignore  Dockerfile  ENVIRONMENT_VARIABLES.md  Procfile  README.md  full_startup.py  pyproject.toml  railway.toml  requirements-full.txt  requirements-minimal.txt  requirements-railway.txt  requirements.txt  standalone_api.py
luki_agent/: __init__.py  agent_core.py  config.py  context_builder.py  context_builder_complete.py  context_builder_corrupted_backup.py  context_builder_fixed.py  context_builder_stub.py  context_optimizer.py  dev_api.py  knowledge_glossary_stub.py  llm_backends.py  llm_resilience.py  main.py  metrics_api.py  minimal_api.py  module_client.py  observability.py  project_kb.py  prompt_registry.py  prompts_enhanced_stub.py  prompts_optimized_stub.py  prompts_system_stub.py  resilience.py  response_quality.py  safety_chain.py  schemas.py  token_optimizer.py  tool_monitor.py  validation.py
luki_agent/chains/: avatar_personality_stub.py  context_builder.py  conversation_chain.py  personality_templates_stub.py  user_context_detector.py
luki_agent/features/: __init__.py  tiers.py
luki_agent/knowledge/: project_glossary.py
luki_agent/memory/: __init__.py  memory_client.py  memory_service_client.py  retriever.py  session_store.py
luki_agent/tools/: __init__.py  registry.py  web_search.py
scripts/: run_dev_server.py
tests/: test_integration.py  test_phase_1d_integration.py
